refactor(templates/node-react-todo): change CSS and HTML to be more discrete

--- a/templates/node-react-todo/src/App.css
+++ b/templates/node-react-todo/src/App.css
@@ -87,7 +87,7 @@
   }
 }
 
-.todo-item {
+/* .todo-item {
   display: flex;
   justify-content: space-between;
   margin-bottom: 8px;
@@ -96,4 +96,4 @@
 .todo-item p {
   color: #888;
   text-decoration: line-through;
-}
+} */
