refactor(templates/node-angular): streamline gitignore and remove duplicate SVG
- Merged  from Angular CLI with our custom  for a unified approach.
- Removed 'oracle-icon(2).svg' to avoid redundancy as only one icon is needed for the main page presentation.

Closes #48

--- a/templates/node-angular/src/app/app.component.html
+++ b/templates/node-angular/src/app/app.component.html
@@ -7,13 +7,13 @@
       <img src="{{ angularLogo }}" class="logo angular" alt="angular logo" />
     </a>
   </div>
-  <h1>{{ checkingConnection}}</h1>
+  <h1>{{ checkingConnection  }}</h1>
   <div class="card">
     <p>
       Edit <code>src/app.component.ts</code> and save to test HMR
     </p>
   </div>
   <p class="read-the-docs">
-    Click on the Oracle and React logos to learn more
+    Click on the Oracle and Angular logos to learn more
   </p>
 </div>
