style(oracle-branding): align button color scheme with Oracle style guide
Updated the button color variables to match the shades specified in the Oracle style guide. This ensures consistency with Oracle's branding and enhances the visual integration of the interface.

Closes #48

--- a/templates/node-react-todo/src/components/style.css
+++ b/templates/node-react-todo/src/components/style.css
@@ -7,13 +7,13 @@
 
 :root {
     --bg-color: #121215;
-    --primary: #8d8fd2;
+    --primary: #d28d8d;
     --dk-text: #dfe0fb;
     --dk-subtext: #84849d;
     --card: #18181c;
     --component: #2f2d36;
-    --gradient-1: rgb(145, 114, 247);
-    --gradient-2: rgb(104, 61, 247);
+    --gradient-1: #B3311F;
+    --gradient-2: hsl(9, 55%, 52%); 
     --toastify-color-progress-success: var(--gradient-1);
     --toastify-color-progress-error: var(--gradient-1);
     --toastify-color-success: var(--gradient-1);
