refactor(templates/node-angular): update templates/node-angular/src/app/app.component.html
Co-authored-by: Leon Silva <leon.silva@oracle.com>

--- a/templates/node-angular/src/app/app.component.html
+++ b/templates/node-angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="root">
   <div>
-    <a href="https://www.oracle.com/uk/database/" target="_blank">
+    <a href="https://www.oracle.com/database/" target="_blank">
       <img src="{{ oracleLogo }}" class="logo" alt="Oracle logo" />
     </a>
     <a href="https://angular.io/" target="_blank">
