--- a/templates/node-jet/src/index.html
+++ b/templates/node-jet/src/index.html
@@ -35,7 +35,8 @@
 		<!-- injector:theme -->
 		<!-- endinjector -->
     <!-- This contains icon fonts used by the starter template -->
-    <link rel="stylesheet" id="uxiconFont" href="https://static.oracle.com/cdn/fnd/gallery/2404.0.0/images/iconfont/ojuxIconFont.min.css"/>
+		<!-- injector:font -->
+		<!-- endinjector:font -->
     <!-- This is where you would add any app specific styling -->
     <link rel="stylesheet" href="styles/app.css" type="text/css" />
   </head>
