fix(deps): bump node-angular template to angular 19.1

--- a/templates/node-angular/src/app/app.component.html
+++ b/templates/node-angular/src/app/app.component.html
@@ -4,7 +4,7 @@
       <img src="{{ oracleLogo }}" class="logo" alt="Oracle logo" />
     </a>
     <a href="https://angular.io/" target="_blank">
-      <img src="{{ angularLogo }}" class="logo angular" alt="angular logo" />
+      <img src="{{ angularLogo }}" class="logo angular" alt="Angular logo" />
     </a>
   </div>
   <h1>{{ checkingConnection }}</h1>
