--- a/templates/node-angular/src/app/app.html
+++ b/templates/node-angular/src/app/app.html
@@ -1,7 +1,7 @@
 <div id="root">
   <div>
     <a href="https://www.oracle.com/database/" target="_blank">
-      <img src="{{ oracleLogo }}" class="logo" alt="Oracle logo" />
+     <img src="{{ oracleLogo }}" class="logo" alt="Oracle logo" />
     </a>
     <a href="https://angular.io/" target="_blank">
       <img src="{{ angularLogo }}" class="logo angular" alt="Angular logo" />
@@ -17,3 +17,5 @@
     Click on the Oracle and Angular logos to learn more
   </p>
 </div>
+
+<router-outlet />
